--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto Mono', monospace;
     margin: 0;
-    background-color: steelblue;
+    background-color: #000428;
+    background-image: linear-gradient(315deg, #000428 0%, #004e92 74%);
   }
   
   .menu {
@@ -9,7 +10,8 @@ body {
     display: grid;
     grid-template-columns: minmax(auto, 1024px);
     justify-content: right;
-    background-color: rgb(80, 155, 45);
+    background-color: #1b1c25;
+
     /* background: #4981fd; */
   }
   
@@ -27,7 +29,7 @@ body {
   
   .menu--content__item a {
     text-decoration: none;
-    color: black;
+    color: white;
     font-weight: 800;
   }
   
@@ -40,7 +42,11 @@ body {
     display: grid;
     grid-template-columns: minmax(auto, 1024px);
     justify-content: center;
-  }
+    background-color: #4e7bb1;
+    background-image: linear-gradient(180deg, #4e7bb1 25%, #68a5ee 100%);
+    /*background-color: #146dcc;
+    background-image: linear-gradient(315deg, #146dcc 25%, #2b32b2 100%);
+  */}
   
   .data--container {
     display: grid;
@@ -69,7 +75,7 @@ body {
     display: grid;
     justify-content: center;
     align-content: center;
-    background-color: #9d98c3;
+    background-color: #ebecf1;
   }
 
   .social--container .title {
@@ -84,6 +90,25 @@ body {
   .social-networks--item {
     display: grid;
     justify-content: center;
+    align-items: center;
+  }
+
+  .social-networks--item__mail {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+  }
+  .social-networks--item__mail a{
+    text-decoration: none;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-weight: 800;
+  }
+
+  .social-networks--item__mail a:hover {
+    text-decoration: underline;
   }
   
   .container {
@@ -92,7 +117,7 @@ body {
     grid-template-columns: minmax(auto, 1024px);
     justify-content: center;
     align-content: center;
-    background: #f8f7ff;
+    background: #206a5d;
   }
   
   .container .title {
@@ -143,7 +168,7 @@ body {
     /* background: #e0e0e0; */
     background: white;
     border-radius: 20px;
-    box-shadow: 1px 5px 12px 2px #888888;
+    /*box-shadow: 1px 5px 12px 2px #888888;*/
   }
   
   .post--card__img img {
@@ -157,13 +182,6 @@ body {
     padding: 15px;
   }
   
-  .card--body__tag-and-date {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    font-size: 12px;
-  }
-  
   .title-post {
     font-size: 20px;
     font-weight: 600;
@@ -172,4 +190,9 @@ body {
   
   .description-post {
     text-align: justify;
-  }  
+  }
+
+  .menu--content__footer {
+    text-align: center;
+    color: white;
+  }
