--- a/css/styles.css
+++ b/css/styles.css
@@ -1,35 +1,36 @@
 body {
-    font-family: 'Roboto Mono', monospace;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
-    background-color: #000428;
-    background-image: linear-gradient(315deg, #000428 0%, #004e92 74%);
-  }
+    background-color: #FAFAFA;
+    }
   
   .menu {
     padding: 15px 10px;
     display: grid;
     grid-template-columns: minmax(auto, 1024px);
     justify-content: right;
-    background-color: #1b1c25;
+    background-color: #fafafa;
 
     /* background: #4981fd; */
   }
   
   .menu--content {
     display: grid;
-    grid-template-columns: 40% repeat(4, 1fr);
+    grid-template-columns: 5% repeat(4, 1fr);
     align-items: center;
-    justify-items: center;
+    justify-items: right;
   }
   
   .menu--content__logo img {
-    align-items: center;
+    display: flex;
+    justify-items: left;
     max-height: 60px;
+    filter: invert(10%) sepia(71%) saturate(3191%) hue-rotate(235deg) brightness(78%) contrast(128%);
   }
   
   .menu--content__item a {
     text-decoration: none;
-    color: white;
+    color: black;
     font-weight: 800;
   }
   
@@ -42,9 +43,9 @@ body {
     display: grid;
     grid-template-columns: minmax(auto, 1024px);
     justify-content: center;
-    background-color: #4e7bb1;
-    background-image: linear-gradient(180deg, #4e7bb1 25%, #68a5ee 100%);
-    /*background-color: #146dcc;
+    background-color: #9CC7EB;
+    background-image: linear-gradient(180deg, #fafafa 25%, #9CC7EB 100%);
+     /*background-color: #146dcc;
     background-image: linear-gradient(315deg, #146dcc 25%, #2b32b2 100%);
   */}
   
@@ -75,7 +76,7 @@ body {
     display: grid;
     justify-content: center;
     align-content: center;
-    background-color: #ebecf1;
+    background-color: #fafafa;
   }
 
   .social--container .title {
@@ -103,7 +104,7 @@ body {
     display: grid;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: black;
     font-weight: 800;
   }
 
@@ -117,7 +118,7 @@ body {
     grid-template-columns: minmax(auto, 1024px);
     justify-content: center;
     align-content: center;
-    background: #206a5d;
+    background: #5BA1DC;
   }
   
   .container .title {
@@ -194,5 +195,5 @@ body {
 
   .menu--content__footer {
     text-align: center;
-    color: white;
+    color: BLACK;
   }
